# grassland

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
.github/test/: windows-cmake-clang.bat  windows-cmake-msvc.bat  windows-cmake.bat
.github/workflows/: clang-format.yml  linux-build.yml  macos-build.yml  windows-build.yml
assets/fonts/: OFL.txt
assets/shaders/: CMakeLists.txt  color_shader_0.5_alpha.frag  shader_base.frag  shader_base.vert
assets/textures/: CMakeLists.txt
demo/: CMakeLists.txt  app.cpp  app.h  main.cpp
demo/blend_test/: app.cpp  app.h
demo/d3d12_hello_triangle/: application.cpp  application.h  main.cpp
demo/fluid2d/: bkground.frag  bkground.vert  fluid2d.cpp  fluid2d.h  main.cpp  particle.frag  particle.vert
demo/fluid_cuda/: camera.cpp  camera.h  fluid_app.cpp  fluid_app.cu  fluid_app.cuh  fluid_app.h  grid.cuh  grid.h  grid_dev.cuh  main.cpp  main.cu  params.h  particle.h  render.frag  render.vert  util.cpp  util.h
demo/fluid_large_cuda/: device_clock.cu  device_clock.cuh  fluid_large.cu  fluid_large.cuh  grid.cu  grid.cuh  grid_linear.cuh  grid_locate.cuh  linear_solvers.cu  linear_solvers.cuh  main.cpp  main.cu  particle.frag  particle.vert  physic_solver.cu  physic_solver.cuh  scene.cu  scene.cuh  util.cu  util.cuh
demo/font/: app.cpp  app.h  main.cpp
demo/framework/: app.cpp  app.h  color_shader.frag  main.cpp
demo/hello_cube/: main.cpp
demo/hello_depth/: application.cpp  main.cpp
demo/hello_multisample/: application.cpp  main.cpp
demo/hello_triangle/: application.h  main.cpp
demo/imgui/: main.cpp
demo/imgui_test/: main.cpp
demo/memory_cuda/: main.cu
demo/nbody_cuda/: color_shader.frag  color_shader.vert  main.cpp  nbody.cpp  nbody.h  nbody_cuda.cu  nbody_cuda.h  params.h
demo/raytracing/: rtapp.cpp  rtapp.h
demo/rotating_cube/: app.cpp  app.h
demo/rotating_cube_headless/: app.cpp  app.h
demo/sum_cuda/: main.cu  sum_cuda.cu  sum_cuda.h
demo/vk_hello_cube/: application.cpp  application.h
demo/vk_hello_depth/: application.h
demo/vk_hello_multisample/: application.h  main.cpp
demo/vk_hello_triangle/: application.cpp  main.cpp
demo/vulkan_gui/: gui_example.cpp  gui_example.h  main.cpp
demo/vulkan_nt/: application.cpp  application.h  main.cpp
demo/vulkan_reforged/: application.cpp  application.h  main.cpp
include/grassland/log/: log.h
include/grassland/logging/: logging.h
include/grassland/vulkan/: instance.h  util.h  vulkan.h
scripts/: flatten_glsl.py  pack_shaders.cmake  xxd.ps1
src/: CMakeLists.txt
src/grassland/: grassland.h
src/grassland/application/: CMakeLists.txt
src/grassland/d3d12/: CMakeLists.txt  d3d12.h
src/grassland/d3d12/core/: adapter.cpp  adapter.h  adaptor.cpp  adaptor.h  command_allocator.cpp  command_allocator.h  command_queue.cpp  command_queue.h  core.cpp  core.h  device.cpp  device.h  dxgi_factory.cpp  dxgi_factory.h  fence.cpp  fence.h  graphics_command_list.cpp  graphics_command_list.h  swap_chain.cpp  swap_chain.h
src/grassland/d3d12/resources/: buffer.cpp  image.cpp  resources.h
src/grassland/d3d12/utils/: d3d12_utils.cpp  d3d12_utils.h
src/grassland/file/: file.cpp
src/grassland/font/: factory.cpp  factory.h  mesh.cpp  mesh.h  util.h
src/grassland/imgui/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/grassland/log/: CMakeLists.txt  log.cpp
src/grassland/logging/: CMakeLists.txt  logging.cpp  logging.h
src/grassland/util/: CMakeLists.txt  string_convert.cpp  string_convert.h  util.h
src/grassland/vulkan/: CMakeLists.txt  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_buffers.cpp  command_buffers.h  command_pool.cpp  command_pool.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  device_memory.cpp  device_memory.h  device_procedures.cpp  device_procedures.h  enumerate.h  fence.cpp  fence.h  format.cpp  format.h  frame_buffer.cpp  frame_buffer.h  framebuffer.cpp  framebuffer.h  graphics_pipeline.cpp  graphics_pipeline.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  instance_procedures.cpp  instance_procedures.h  (+27 more)
src/grassland/vulkan/core/: command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  core.cpp  core.h  device.cpp  device.h  device_procedures.cpp  device_procedures.h  fence.cpp  fence.h  instance.cpp  instance.h  instance_procedures.cpp  instance_procedures.h  instance_settings.cpp  instance_settings.h  physical_device.cpp  physical_device.h  queue.cpp  queue.h  semaphore.cpp  semaphore.h  single_time_commands.cpp  single_time_commands.h  surface.cpp  surface.h  swap_chain.cpp  swap_chain.h  util.h
src/grassland/vulkan/descriptors/: descriptor_layout.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptors.h
src/grassland/vulkan/framework/: application.cpp  application.h  core.cpp  core.h  core_settings.h  data_buffer.cpp  data_buffer.h  dynamic_buffer.h  framework.h  ray_tracing_render_node.cpp  ray_tracing_render_node.h  render_node.cpp  render_node.h  render_node_settings.cpp  render_node_settings.h  static_buffer.h  texture_image.cpp  texture_image.h  uniform_bindings.cpp  uniform_bindings.h
src/grassland/vulkan_legacy/: CMakeLists.txt  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  device_procedures.cpp  device_procedures.h  fence.cpp  fence.h  format.cpp  format.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  instance_procedures.cpp  instance_procedures.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  queue.cpp  queue.h  render_pass.cpp  (+13 more)
(+127 files in other folders)
