add_executable(grassland-demo)
file(GLOB demo_sources *.cpp *.h)
foreach(demo_source ${demo_sources})
    target_sources(grassland-demo PRIVATE ${demo_source})
endforeach()
target_include_directories(grassland-demo PRIVATE ${GRASSLAND_INCLUDE_DIR} ${GRASSLAND_EXTERNAL_INCLUDE_DIRS})
target_link_libraries(grassland-demo PRIVATE grassland)
add_dependencies(grassland-demo compiled_shaders_target)
